--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,14 +12,41 @@
 {% block content %}
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
+            <div class="my-auto">
                 <h1 class="display-4 logo-font text-black">
                     Discover new trips in the wilderness
                 </h1>
+                            
                 <div class="my-5">
-                    <h4>
-                        <a href="#" class="shop-now-button btn btn-lg rounded-2 text-uppercase py-3">Check Availability</a>
-                    </h4>
+                    <form action="" method="POST">
+            {% csrf_token %}
+            <div class="row justify-content-center py-5">
+                <div class="col-lg-3">
+                    <select class="form-control" name="search_location" id="roomstatus">
+                        <!--location-->
+                        <option>Location</option>
+                            <option value="Podvis">Podvis</option>
+                            <option value="Razlog">tow</option>
+                            <option value="Leshten">three</option>
+                    </select>
+                </div>
+                <div class="col-lg-2">
+                    <input class="form-control mr-sm-2" type="date" placeholder="Check in" aria-label="Search" required="True">
+                </div>
+                <div class="col-lg-2">
+                    <input class="form-control mr-sm-2" type="date" placeholder="Check out" aria-label="Search" required="True">
+                </div>
+                <div class="col-lg-2">
+                    <input class="form-control mr-sm-2 py-3" type="number" placeholder="Guests" name="capacity" aria-label="Search" required="True">
+                </div>
+                <div class="col-lg-3">
+                        <input type="submit" value="Check Availabilty" class="form-control mr-sm-2 btn btn-black my-auto">
+                </div>
+                </div>
+                {% if rooms %}
+                <p class="text-center text-success">Rooms Available</p>
+                {% endif %}
+            </form>
                 </div>
             </div>
         </div>
