08-Seach page urls wired up

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
          <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-6 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="logo-font text-black my-0"><strong>Hotel Podvis Bor</strong></h2>
+                    <h2 class="logo-font text-black my-0"><strong>Villas Podvis Bor</strong></h2>
                 </a>
             </div>
             <div class="col-12 col-lg-6 my-auto py-1 py-lg-0">
@@ -95,7 +95,16 @@
     </header>
 
     {% if messages %}
-        <div class="message-container"></div>
+        <div class="message-container">
+            {% for message in messages %}
+             <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+            {{message}}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+             </button>
+            </div>
+        {% endfor %}
+        </div>
     {% endif %}
 
     {% block page_header %}
