09-Search page view.py modified and bug fixed

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -46,4 +46,9 @@
 		</div>
 	</div>
 </div>
+{% block postload_js %}
+    <script src="{% static 'hotel/datepicker.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+{% endblock %}
 {% endblock %}
