--- a/hotel/templates/room_results.html
+++ b/hotel/templates/room_results.html
@@ -15,6 +15,7 @@
         <div class="row">
             <div class="col text-center mt-3">
                 <h2 class="logo-font">Rooms</h2>
+                hello
                 <hr class="w-100 mb-1">
             </div>
 		<div class="row">
