--- a/hotel/templates/room_results.html
+++ b/hotel/templates/room_results.html
@@ -14,8 +14,8 @@
     <div class="container">
         <div class="row">
             <div class="col text-center mt-3">
-                <h2 class="logo-font">Rooms</h2>
-                hello
+                <h2 class="logo-font">Rooms Available</h2>
+                
                 <hr class="w-100 mb-1">
             </div>
 		<div class="row">
